--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <header>
 
 <div id="header-top">
-<h1>トラベルロゴで魅力的な目的地を発見しよう！現在キャンペーン中！</h1>
+<h1>いつも動画を見てくれてありがとう！</h1>
 <ul class="lang">
 <li><a href="#">English</a></li>
 <li><a href="#">Chinese</a></li>
@@ -61,9 +61,8 @@
 
 <div class="slide slide1">
 <div>
-<h2>魅力的な目的地を発見<span>Discover Stunning Destinations</span></h2>
-<p>世界中の最も息をのむような目的地を探索しましょう。<br>
-私たちの地球が提供する美しさと多様性を発見してください。</p>
+<h2>君だけの地図で、合格へ<span>ともきんぐのオンライン受験サポート</span></h2>
+<p>毎日続けられる勉強法で、<br>確実な合格へ導くマンツーマン指導</p>
 </div>
 <video src="images/1.mp4" autoplay loop muted playsinline></video>
 </div>
@@ -80,7 +79,7 @@
 
 <section>
 
-<h2>今の季節に人気の観光地<span class="small">Popular tourist destinations for this season</span></h2>
+<h2>コース一覧<span class="small">Popular tourist destinations for this season</span></h2>
 
 <div class="list-grid1">
 
