--- a/index.html
+++ b/index.html
@@ -231,16 +231,12 @@
 
 <div class="left">
 
-<h3>Travel Logo</h3>
-<p>〒000-0000 東京足立区XXXXXX1丁目1号<br>
-代表電話：000-0000-0000<br>
-受付時間：月曜日から金曜日の8時から18時まで</p>
+<h3>ともきんぐ</h3>
+<p>メール：tomoki.business.0715@gmail.com</p>
 
 <ul class="icons">
-<li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
 <li><a href="#"><i class="fab fa-line"></i></a></li>
 <li><a href="#"><i class="fab fa-youtube"></i></a></li>
-<li><a href="#"><i class="fab fa-instagram"></i></a></li>
 </ul>
 
 <p class="btn"><a href="contact.html">問い合わせ</a></p>
@@ -249,15 +245,7 @@
 </div>
 <!--/.left-->
 
-<div class="right">
 
-<h3>アクセス</h3>
-<p><a href="https://template-party.com/file/pickup_googlemap.html">GoogleMapの地図を変更する方法はマニュアルをご覧下さい。</a></p>
-<div class="iframe-box">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.0448418561778!2d139.74267721573196!3d35.675897837870934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b89b2e1c8b1%3A0x59a123e3d5ac5ab6!2z44CSMTAwLTAwMTQg5p2x5Lqs6YO95Y2D5Luj55Sw5Yy65rC455Sw55S677yR5LiB55uu77yX4oiS77yR!5e0!3m2!1sja!2sjp!4v1545036128899" frameborder="0" style="border:0" allowfullscreen></iframe>
-</div>
-	
-</div>
 <!--/.right-->
 
 </div>
@@ -293,7 +281,7 @@
 <!--/#footermenu-->
 
 <footer>
-<small>Copyright&copy; <a href="index.html">Travel Logo</a> All Rights Reserved.</small>
+<small>&copy; <a href="index.html">Tomoking</a> All Rights Reserved.</small>
 <span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </footer>
 
