--- a/index.html
+++ b/index.html
@@ -15,8 +15,6 @@
 <div id="header-top">
 <h1>いつも動画を見てくれてありがとう！</h1>
 <ul class="lang">
-<li><a href="#">English</a></li>
-<li><a href="#">Chinese</a></li>
 </ul>
 </div>
 
@@ -30,22 +28,22 @@
 <nav>
 <ul>
 <li><a href="index.html">ホーム<span>Home</span></a></li>
-<li><a href="destinations.html">観光地<span>Destinations</span></a>
+<li><a href="destinations.html">コース一覧</a>
 	<ul>
 	<li><a href="destinations.html#link1">観光地メニュー1</a></li>
 	<li><a href="destinations.html#link2">観光地メニュー2</a></li>
 	<li><a href="destinations.html#link3">観光地メニュー3</a></li>
 	</ul>
 </li>
-<li><a href="activities.html">アクティビティ<span>Activities</span></a>
+<li><a href="activities.html">特徴</a>
 	<ul>
 	<li><a href="activities_item.html">アクティビティ詳細</a></li>
 	<li><a href="activities_item.html">アクティビティ詳細</a></li>
 	<li><a href="activities_item.html">アクティビティ詳細</a></li>
 	</ul>
 </li>
-<li><a href="events.html">イベント<span>Events</span></a></li>
-<li><a href="faq.html">よく頂く質問<span>Faq</span></a></li>
+<li><a href="events.html">ともきんぐ</a></li>
+<li><a href="faq.html">よく頂く質問</a></li>
 </ul>
 </nav>
 
