--- a/index.html
+++ b/index.html
@@ -156,7 +156,7 @@
 
 <section class="bg3 blur">
 
-<h2><span class="kazari3-wrap">お知らせ<span class="small">What's New</span></span></h2>
+<h2><span class="kazari3-wrap">お知らせ</h2>
 
 <dl class="new">
 <dt>2024/07/16<span>アイコン</span></dt>
@@ -171,11 +171,7 @@
 <dd>サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。</dd>
 </dl>
 
-<a href="https://q19cms.com/files_m/file/cms_oshirase.html" target="_blank"><img src="https://template-party.com/file/images/cms_oshirase/banner_oshirase_cms2.jpg" alt="無料で使えるお知らせCMSのご案内"></a>
 
-
-<!--画面右半分で回転する大きな円形のテキストアニメーション-->
-<img src="images/bg_text1.svg" alt="" class="animation-text spin">
 
 </main>
 
