--- a/index.html
+++ b/index.html
@@ -30,16 +30,16 @@
 <li><a href="index.html">ホーム<span>Home</span></a></li>
 <li><a href="destinations.html">コース一覧</a>
 	<ul>
-	<li><a href="destinations.html#link1">観光地メニュー1</a></li>
-	<li><a href="destinations.html#link2">観光地メニュー2</a></li>
-	<li><a href="destinations.html#link3">観光地メニュー3</a></li>
+	<li><a href="destinations.html#link1">勉強習慣獲得プログラム</a></li>
+	<li><a href="destinations.html#link2">準備中</a></li>
+	<li><a href="destinations.html#link3">準備中</a></li>
 	</ul>
 </li>
 <li><a href="activities.html">特徴</a>
 	<ul>
-	<li><a href="activities_item.html">アクティビティ詳細</a></li>
-	<li><a href="activities_item.html">アクティビティ詳細</a></li>
-	<li><a href="activities_item.html">アクティビティ詳細</a></li>
+	<li><a href="activities_item.html">完全マンツーマン指導</a></li>
+	<li><a href="activities_item.html">毎日の進捗管理</a></li>
+	<li><a href="activities_item.html">オーダーメイドの勉強計画</a></li>
 	</ul>
 </li>
 <li><a href="events.html">ともきんぐ</a></li>
@@ -77,36 +77,47 @@
 
 <section>
 
-<h2>コース一覧<span class="small">Popular tourist destinations for this season</span></h2>
+<h2>コース一覧</h2>
 
 <div class="list-grid1">
 
 <div class="list blur">
 <figure><img src="images/1.jpg" alt=""></figure>
 <div class="text">
-<h4>観光地タイトル1</h4>
-<p>観光地の簡単な説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+<h4>勉強週間獲得プログラム</h4>
+<p>毎日3時間の勉強習慣を獲得できるプログラム</p>
 </div>
 <p class="btn"><a href="destinations.html#link1">詳しくみる</a></p>
 </div>
 
+<!--準備中-->
+
+	
 <div class="list blur">
 <figure><img src="images/2.jpg" alt=""></figure>
 <div class="text">
-<h4>観光地タイトル2</h4>
-<p>観光地の簡単な説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+<h4>準備中</h4>
+<p>準備中</p>
 </div>
-<p class="btn"><a href="destinations.html#link2">詳しくみる</a></p>
-</div>
+	<!--ボタン-->
 
+<!--    <p class="btn"><a href="destinations.html#link2">詳しく見る</a></p>      -->
+
+	
+	</div>
+
+
+	
 <div class="list blur">
 <figure><img src="images/3.jpg" alt=""></figure>
 <div class="text">
-<h4>観光地タイトル3</h4>
-<p>観光地の簡単な説明を入れます。サンプルテキスト。サンプルテキスト。サンプルテキスト。<br>
-観光地の簡単な説明を入れます。</p>
+<h4>準備中</h4>
+<p>準備中</p>
 </div>
-<p class="btn"><a href="destinations.html#link3">詳しくみる</a></p>
+<!--ボタン-->
+
+<!--    <p class="btn"><a href="destinations.html#link2">詳しく見る</a></p>      -->
+
 </div>
 
 </div>
@@ -116,15 +127,16 @@
 
 <section>
 
-<h2 class="l">人気のアクティビティスポット<span class="small">Popular Activity Spots Now</span></h2>
+<h2 class="l">特徴</h2>
 
 <div class="list-half">
 
 <h3>コメントを入れます<i class="fa-solid fa-person-walking"></i></h3>
 
 <div class="text">
-<h4>アクティビティスポット1<img src="images/kazari1.png" alt="" class="kazari"></h4>
-<p>サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+<h4>完全マンツーマン指導<img src="images/kazari1.png" alt="" class="kazari"></h4>
+<p>講師はともきんぐ１人だけ。</br>進捗管理も、質問対応も、モチベーションサポートも、すべて私が責任をもって行います。
+</p>
 <p class="btn"><a href="activities_item.html">詳しくみる</a></p>
 </div>
 
