--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
 
 <div class="list-half">
 
-<h3>コメントを入れます<i class="fa-solid fa-person-walking"></i></h3>
+<h3>だから結果が出る！<i class="fa-solid fa-person-walking"></i></h3>
 
 <div class="text">
 <h4>完全マンツーマン指導<img src="images/kazari1.png" alt="" class="kazari"></h4>
@@ -149,11 +149,11 @@
 
 <div class="list-half reverse">
 
-<h3>コメントを入れます<i class="fa-regular fa-face-smile-wink"></i></h3>
+<h3>一人じゃ続かない君に！<i class="fa-regular fa-face-smile-wink"></i></h3>
 
 <div class="text">
-<h4>アクティビティスポット2<img src="images/kazari2.png" alt="" class="kazari"></h4>
-<p>サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。サンプルテキスト。</p>
+<h4>毎日の進捗管理<img src="images/kazari2.png" alt="" class="kazari"></h4>
+<p>公式LINEを使って、勉強の進み具合を確認します。<br>すぐに相談・報告できるから、不安や迷いをすぐ解決できます。</p>
 <p class="btn"><a href="activities_item.html">詳しくみる</a></p>
 </div>
 
@@ -162,6 +162,30 @@
 </div>
 
 </div>
+
+
+
+
+<div class="list-half reverse">
+
+<h3>君だけの勉強地図<i class="fa-regular fa-face-smile-wink"></i></h3>
+
+<div class="text">
+<h4>オーダーメイドの勉強計画<img src="images/kazari2.png" alt="" class="kazari"></h4>
+<p>毎週の進捗・模試の結果・やる気の波に合わせて、計画は常にアップデート。
+「次に何をすればいいか」「今どれくらい進んでいるか」が明確だから、迷わず努力を続けられます。</p>
+<p class="btn"><a href="activities_item.html">詳しくみる</a></p>
+</div>
+
+<div class="image">
+<img src="images/2.jpg" alt="">
+</div>
+
+</div>
+
+
+
+	
 <!--/.list-half-->
 
 </section>
