--- a/index.html
+++ b/index.html
@@ -244,8 +244,7 @@
 <li><a href="#"><i class="fab fa-youtube"></i></a></li>
 </ul>
 
-<p class="btn"><a href="contact.html">問い合わせ</a></p>
-<p class="btn"><a href="contact.html">資料請求</a></p>
+<p class="btn"><a href="https://docs.google.com/forms/d/e/1FAIpQLSddD4xnvoc9QdZz3LcxiyphRp9M5ZNudzO9mEMu8_v2b3OH7A/viewform?usp=dialog">問い合わせ</a></p>
 
 </div>
 <!--/.left-->
