--- a/index.html
+++ b/index.html
@@ -166,19 +166,20 @@
 
 
 
-<div class="list-half reverse">
+<div class="list-half">
 
-<h3>君だけの勉強地図<i class="fa-regular fa-face-smile-wink"></i></h3>
+<h3>君だけの勉強地図<i class="fa-solid fa-person-walking"></i></h3>
 
 <div class="text">
-<h4>オーダーメイドの勉強計画<img src="images/kazari2.png" alt="" class="kazari"></h4>
-<p>毎週の進捗・模試の結果・やる気の波に合わせて、計画は常にアップデート。
-「次に何をすればいいか」「今どれくらい進んでいるか」が明確だから、迷わず努力を続けられます。</p>
+<h4>オーダーメイドの勉強計画<img src="images/kazari1.png" alt="" class="kazari"></h4>
+<p>毎週の進捗・模試の結果・やる気の波に合わせて、計画は常にアップデート。</br>
+「次に何をすればいいか」「今どれくらい進んでいるか」が明確だから、迷わず努力を続けられます。
+</p>
 <p class="btn"><a href="activities_item.html">詳しくみる</a></p>
 </div>
 
 <div class="image">
-<img src="images/2.jpg" alt="">
+<img src="images/1.jpg" alt="">
 </div>
 
 </div>
