--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
 <p>メール：tomoki.business.0715@gmail.com</p>
 
 <ul class="icons">
-<li><a href="#"><i class="fab fa-line"></i></a></li>
+<li><a href="https://lin.ee/NMnSBZW"><i class="fab fa-line"></i></a></li>
 <li><a href="#"><i class="fab fa-youtube"></i></a></li>
 </ul>
 
