--- a/index.html
+++ b/index.html
@@ -242,7 +242,7 @@
 
 <ul class="icons">
 <li><a href="https://lin.ee/NMnSBZW"><i class="fab fa-line"></i></a></li>
-<li><a href="#"><i class="fab fa-youtube"></i></a></li>
+<li><a href="https://youtube.com/@tomotomoking?si=-To-MK_6kz3ujxdS"><i class="fab fa-youtube"></i></a></li>
 </ul>
 
 <p class="btn"><a href="https://docs.google.com/forms/d/e/1FAIpQLSddD4xnvoc9QdZz3LcxiyphRp9M5ZNudzO9mEMu8_v2b3OH7A/viewform?usp=dialog">問い合わせ</a></p>
