--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
 <figure><img src="images/1.jpg" alt=""></figure>
 <div class="text">
 <h4>勉強週間獲得プログラム</h4>
-<p>毎日3時間の勉強習慣を獲得できるプログラム</p>
+<p>毎日3時間の確実な勉強習慣を獲得</p>
 </div>
 <p class="btn"><a href="destinations.html#link1">詳しくみる</a></p>
 </div>
@@ -109,7 +109,7 @@
 
 <div class="text">
 <h4>完全マンツーマン指導<img src="images/kazari1.png" alt="" class="kazari"></h4>
-<p>講師はともきんぐ１人だけ。</br>進捗管理も、質問対応も、モチベーションサポートも、すべて私が責任をもって行います。
+<p>講師はともきんぐ１人だけ。</br>進捗管理も、質問対応も、モチベーションサポートも。最後まで責任を持って請け負います。
 </p>
 <p class="btn"><a href="activities_item.html">詳しくみる</a></p>
 </div>
@@ -127,7 +127,7 @@
 
 <div class="text">
 <h4>毎日の進捗管理<img src="images/kazari2.png" alt="" class="kazari"></h4>
-<p>公式LINEを使って、勉強の進み具合を確認します。<br>すぐに相談・報告できるから、不安や迷いをすぐ解決できます。</p>
+<p>公式LINEを使って、勉強の進み具合を確認。<br>すぐに相談・報告できるから、不安や迷いを解決できます。</p>
 <p class="btn"><a href="activities_item.html">詳しくみる</a></p>
 </div>
 
@@ -146,8 +146,8 @@
 
 <div class="text">
 <h4>オーダーメイドの勉強計画<img src="images/kazari1.png" alt="" class="kazari"></h4>
-<p>毎週の進捗・模試の結果・やる気の波に合わせて、計画は常にアップデート。</br>
-「次に何をすればいいか」「今どれくらい進んでいるか」が明確だから、迷わず努力を続けられます。
+<p>進捗・模試の結果・やる気に合わせて、計画は常にアップデート。</br>
+「次に何をすればいいか」「今どれくらい進んでいるか」が明確だから、迷わず勉強を続けられます。
 </p>
 <p class="btn"><a href="activities_item.html">詳しくみる</a></p>
 </div>
