--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 	</ul>
 </li>
 <li><a href="events.html">ともきんぐ</a></li>
-<li><a href="faq.html">よく頂く質問</a></li>
+<li><a href="faq.html">よくある質問</a></li>
 </ul>
 </nav>
 
