--- a/index.html
+++ b/index.html
@@ -220,7 +220,8 @@
 </ul>
 
 <p class="btn"><a href="https://docs.google.com/forms/d/e/1FAIpQLSddD4xnvoc9QdZz3LcxiyphRp9M5ZNudzO9mEMu8_v2b3OH7A/viewform?usp=dialog">問い合わせ</a></p>
-<p class="btn"><a href="privacy.html">プライバシーポリシー</a></p>
+<p><a href="privacy.html">プライバシーポリシー</a></p>
+<p><a href="transraw.html">特定商取引法表示</a></p>
 
 </div>
 <!--/.left-->
