--- a/index.html
+++ b/index.html
@@ -221,7 +221,7 @@
 
 <p class="btn"><a href="https://docs.google.com/forms/d/e/1FAIpQLSddD4xnvoc9QdZz3LcxiyphRp9M5ZNudzO9mEMu8_v2b3OH7A/viewform?usp=dialog">問い合わせ</a></p>
 <p><a href="privacy.html">プライバシーポリシー</a></p>
-<p><a href="transraw.html">特定商取引法表示</a></p>
+<p><a href="transraw.html">特定商取引法に基づく表示</a></p>
 
 </div>
 <!--/.left-->
