--- a/menseki.html
+++ b/menseki.html
@@ -14,26 +14,26 @@
     <p>当サービスでは、受験生の方々をサポートするオンラインコーチングを行っています。サービス内容や提供方法については、時期や個別のニーズに応じて変更されることがあります。</p>
 
     <h2>2. 合格の保証について</h2>
-    <p>皆さんの学習を最大限サポートすることを目的としていますが、受験結果についての合格は保証できません。最終的な成果は、皆さん自身の努力や状況に依存しますので、どうかご理解のうえご利用ください。</p>
+    <p>皆さんの学習を最大限サポートすることを目的としていますが、受験結果についての保証はできかねます。最終的な成果は、皆さん自身の努力や状況に依存しますので、ご理解のうえご利用ください。</p>
 
-    <h2>3. 受講生の責任について</h2>
-    <p>サービスを受けるにあたっては、皆さん自身が積極的に学習に取り組んでいただくことが大切です。できる限りサポートしますが、最終的には皆さんの努力が成果に繋がりますので、頑張ってくださいね！</p>
+    <h2>3. 受講生について</h2>
+    <p>サービスを受けるにあたっては、皆さん自身が積極的に学習に取り組んでいただくことが何よりも大切です。できる限りサポートしますが、最終的には皆さんの努力が成果に繋がります。</p>
 
     <h2>4. サービスの中断・停止について</h2>
     <p>システムのメンテナンスや不具合などにより、一時的にサービスが利用できなくなる可能性があります。万が一、サービスが長期間中断される場合は、できる限り早くお知らせいたします。</p>
 
     <h2>5. 個人情報の取り扱いについて</h2>
-    <p>皆さんの個人情報は大切に取り扱います。プライバシーには十分配慮し、法令に従って管理していますので、安心してサービスを受けていただけます。詳しくはプライバシーポリシーをお読みください。</p>
+    <p>皆さんの個人情報は大切に取り扱います。プライバシーには十分配慮し、法令に従って管理していますので、詳しくは<a href="privacy.html">プライバシーポリシー</a>をお読みください。</p>
 
     <h2>6. サービス利用におけるトラブル</h2>
-    <p>万が一、サービス利用中に何か問題が発生した場合でも可能な範囲で損失の回復に努めますが、利用者様自身の判断や責任となる事象もありますので、その点もご理解ください。</p>
+    <p>万が一サービス利用中に問題が発生した場合でも、可能な範囲で損失の回復に努めますが、利用者様自身の判断や責任となる事象もあります。ご了承ください。</p>
 
     <h2>7. サービス利用規約の変更</h2>
-    <p>今後、サービス内容や免責事項を少し変更することがあるかもしれません。その際は、ウェブサイトにてお知らせいたしますので、定期的にチェックしていただけると助かります。</p>
+    <p>今後、サービス内容や免責事項が変更される可能性があります。その際は当ウェブサイトにてお知らせいたします。</p>
 
     <h2>8. その他の免責事項</h2>
-    <p>サービスを利用している際、自然災害や第三者の行為などによって発生した問題については、当サービスは責任を負いかねます。こうした状況に関しては、ご理解いただけますと幸いです。</p>
+    <p>サービスを利用している際、自然災害や第三者の行為などによって発生した問題については、当サービスは責任を負いかねますので、ご了承ください。</p>
 
-    <p>これらの免責事項をお読みいただき、理解していただけると嬉しいです。安心してご利用いただけるよう、努めてまいりますので、よろしくお願いいたします。</p>
+    <p>これらの免責事項をお読みいただき、ご了承の上でサービスをご利用ください。最大限のサービスを提供できるよう努めてまいりますので、ご理解とご協力をよろしくお願いいたします。</p>
 </body>
 </html>
