--- a/privacy.html
+++ b/privacy.html
@@ -33,7 +33,7 @@
     <h2>6. プライバシーポリシーの改定</h2>
     <p>当サイトは、法律の改正やサービス内容の変更等に伴い、本プライバシーポリシーを予告なく改定することがあります。改定後は、当サイトに掲載された時点で効力を持ちます。</p>
 
-    <p>本プライバシーポリシーに関するご質問や疑問がある場合は、お問い合わせフォームからご連絡ください。</p>
+    <p>本プライバシーポリシーに関するご質問や疑問がある場合は、<a href="https://docs.google.com/forms/d/e/1FAIpQLSddD4xnvoc9QdZz3LcxiyphRp9M5ZNudzO9mEMu8_v2b3OH7A/viewform?usp=dialog">お問い合わせフォーム</a>からご連絡ください。</p>
 
     <p><small>最終更新日: 2025年4月21日</small></p>
 </body>
