--- a/transraw.html
+++ b/transraw.html
@@ -35,19 +35,16 @@
     <h2>支払い時期</h2>
     <p>サービス開始前に前払いでお支払いいただきます。</p>
 
-    <h2>返品・キャンセルについて</h2>
-    <p>オンラインコーチングサービスは、開始後の返品や返金は原則として承っておりません。ただし、やむを得ない事情がある場合は、個別に対応させていただきますので、お問い合わせください。</p>
-
-    <h2>不良品について</h2>
-    <p>提供するサービスに不備があった場合、無償で再提供または返金対応をいたします。</p>
+    <h2>返金対応について</h2>
+    <p>提供するサービスに不備があった場合、無償で再提供または返金対応をいたします。まずはLINEもしくはメール等でお問い合わせください。但し、お客様都合での返金対応には対応致しかねますのでご了承ください。</p>
 
     <h2>提供するサービス</h2>
     <p>受験生向けのオンラインコーチングサービス（詳細はサービスページをご確認ください）。</p>
 
     <h2>プライバシーポリシー</h2>
-    <p>お客様の個人情報は、法令に基づき適切に取り扱います。詳細は「プライバシーポリシー」をご覧ください。</p>
+    <p>お客様の個人情報は、法令に基づき適切に取り扱います。詳細は<a href="privacy.html">プライバシーポリシー</a>をご覧ください。</p>
 
     <h2>その他</h2>
-    <p>本サービスのご利用にあたっては、サービス規約に同意の上お申し込みください。</p>
+    <p>本サービスのご利用にあたっては、以上に同意の上お申し込みください。</p>
 </body>
 </html>
