--- a/index.html
+++ b/index.html
@@ -145,7 +145,7 @@
 <h3>君だけの勉強地図<i class="fa-solid fa-person-walking"></i></h3>
 
 <div class="text">
-<h4>オーダーメイドの勉強計画<img src="images/kazari1.png" alt="" class="kazari"></h4>
+<h4>君だけの参考書ルート<img src="images/kazari1.png" alt="" class="kazari"></h4>
 <p>進捗・模試の結果・やる気に合わせて、計画は常にアップデート。</br>
 「次に何をすればいいか」「今どれくらい進んでいるか」が明確だから、迷わず勉強を続けられます。
 </p>
