--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 <div class="list-grid1">
 
 <div class="list blur">
-<figure><img src="images/1.jpg" alt=""></figure>
+<figure><img src="images/cose1.jpg" alt=""></figure>
 <div class="text">
 <h4>勉強週間獲得プログラム</h4>
 <p>毎日3時間の確実な勉強習慣を獲得</p>
