--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
 </div>
 
 <div class="image">
-<img src="images/2.jpg" alt="">
+<img src="images/feture2.jpg" alt="">
 </div>
 
 </div>
@@ -153,7 +153,7 @@
 </div>
 
 <div class="image">
-<img src="images/1.jpg" alt="">
+<img src="images/feture3.jpg" alt="">
 </div>
 
 </div>
@@ -197,12 +197,12 @@
 <h2 class="dn">ギャラリー</h2>
 
 <div class="thumbnail-slide">
-<a href="#"><img src="images/1.jpg" alt=""></a>
-<a href="#"><img src="images/2.jpg" alt=""></a>
-<a href="#"><img src="images/3.jpg" alt=""></a>
-<a href="#"><img src="images/1.jpg" alt=""></a>
-<a href="#"><img src="images/2.jpg" alt=""></a>
-<a href="#"><img src="images/3.jpg" alt=""></a>
+<a href="#"><img src="images/feture1.jpg" alt=""></a>
+<a href="#"><img src="images/feture2.jpg" alt=""></a>
+<a href="#"><img src="images/feture3.jpg" alt=""></a>
+<a href="#"><img src="images/feture1.jpg" alt=""></a>
+<a href="#"><img src="images/feture2.jpg" alt=""></a>
+<a href="#"><img src="images/feture3.jpg" alt=""></a>
 </div>
 
 </section>
