--- a/destinations.html
+++ b/destinations.html
@@ -13,16 +13,14 @@
 <header>
 
 <div id="header-top">
-<h1>トラベルロゴで魅力的な目的地を発見しよう！現在キャンペーン中！</h1>
+<h1>いつも動画を見てくれてありがとう！</h1>
 <ul class="lang">
-<li><a href="#">English</a></li>
-<li><a href="#">Chinese</a></li>
 </ul>
 </div>
 
 <div class="header-inner">
 
-<h1 id="logo"><a href="index.html"><img src="images/logo.png" alt="Travel Logo"></a></h1>
+<p id="logo"><a href="index.html"><img src="images/logo_home.png" alt="Travel Logo"></a></p>
 
 <!--開閉ブロック-->
 <div id="menubar">
@@ -30,22 +28,22 @@
 <nav>
 <ul>
 <li><a href="index.html">ホーム<span>Home</span></a></li>
-<li class="current"><a href="destinations.html">観光地<span>Destinations</span></a>
+<li><a href="destinations.html">コース一覧</a>
 	<ul>
-	<li><a href="#link1">観光地メニュー1</a></li>
-	<li><a href="#link2">観光地メニュー2</a></li>
-	<li><a href="#link3">観光地メニュー3</a></li>
+	<li><a href="destinations.html#link1">勉強習慣獲得プログラム</a></li>
+	<li><a href="destinations.html#link2">準備中</a></li>
+	<li><a href="destinations.html#link3">準備中</a></li>
 	</ul>
 </li>
-<li><a href="activities.html">アクティビティ<span>Activities</span></a>
+<li><a href="activities.html">特徴</a>
 	<ul>
-	<li><a href="activities_item.html">アクティビティ詳細</a></li>
-	<li><a href="activities_item.html">アクティビティ詳細</a></li>
-	<li><a href="activities_item.html">アクティビティ詳細</a></li>
+	<li><a href="activities_item.html">完全マンツーマン指導</a></li>
+	<li><a href="activities_item.html">毎日の進捗管理</a></li>
+	<li><a href="activities_item.html">オーダーメイドの勉強計画</a></li>
 	</ul>
 </li>
-<li><a href="events.html">イベント<span>Events</span></a></li>
-<li><a href="faq.html">よく頂く質問<span>Faq</span></a></li>
+<li><a href="events.html">ともきんぐ</a></li>
+<li><a href="faq.html">よくある質問</a></li>
 </ul>
 </nav>
 
