--- a/events.html
+++ b/events.html
@@ -119,75 +119,52 @@
 </div>
 <!--/#container-->
 
+<div class="thumbnail-slide">
+<a href="#"><img src="images/feture1.jpg" alt=""></a>
+<a href="#"><img src="images/feture2.jpg" alt=""></a>
+<a href="#"><img src="images/feture3.jpg" alt=""></a>
+<a href="#"><img src="images/feture1.jpg" alt=""></a>
+<a href="#"><img src="images/feture2.jpg" alt=""></a>
+<a href="#"><img src="images/feture3.jpg" alt=""></a>
+</div>
+
+</section>
+
 <div id="footer-contents">
 
 <div class="left">
 
-<h3>Travel Logo</h3>
-<p>〒000-0000 東京足立区XXXXXX1丁目1号<br>
-代表電話：000-0000-0000<br>
-受付時間：月曜日から金曜日の8時から18時まで</p>
+<h3>ともきんぐ</h3>
+<p>メール：tomoki.business.0715@gmail.com</p>
 
 <ul class="icons">
-<li><a href="#"><i class="fa-brands fa-x-twitter"></i></a></li>
-<li><a href="#"><i class="fab fa-line"></i></a></li>
-<li><a href="#"><i class="fab fa-youtube"></i></a></li>
-<li><a href="#"><i class="fab fa-instagram"></i></a></li>
+<li><a href="https://lin.ee/NMnSBZW"><i class="fab fa-line"></i></a></li>
+<li><a href="https://youtube.com/@tomotomoking?si=-To-MK_6kz3ujxdS"><i class="fab fa-youtube"></i></a></li>
 </ul>
 
-<p class="btn"><a href="contact.html">問い合わせ</a></p>
-<p class="btn"><a href="contact.html">資料請求</a></p>
+<p class="btn"><a href="https://docs.google.com/forms/d/e/1FAIpQLSddD4xnvoc9QdZz3LcxiyphRp9M5ZNudzO9mEMu8_v2b3OH7A/viewform?usp=dialog">問い合わせ</a></p>
+<p><a href="privacy.html">プライバシーポリシー</a></p>
+<p><a href="transraw.html">特定商取引法に基づく表示</a></p>
+<p><a href="menseki.html">免責事項</a></p>
+
 
 </div>
 <!--/.left-->
 
-<div class="right">
 
-<h3>アクセス</h3>
-<p><a href="https://template-party.com/file/pickup_googlemap.html">GoogleMapの地図を変更する方法はマニュアルをご覧下さい。</a></p>
-<div class="iframe-box">
-<iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3241.0448418561778!2d139.74267721573196!3d35.675897837870934!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x60188b89b2e1c8b1%3A0x59a123e3d5ac5ab6!2z44CSMTAwLTAwMTQg5p2x5Lqs6YO95Y2D5Luj55Sw5Yy65rC455Sw55S677yR5LiB55uu77yX4oiS77yR!5e0!3m2!1sja!2sjp!4v1545036128899" frameborder="0" style="border:0" allowfullscreen></iframe>
-</div>
-	
-</div>
 <!--/.right-->
 
 </div>
 <!--/#footer-contents-->
 
-<div id="footermenu">
-<ul>
-<li class="title">メニュー見出し</li>
-<li><a href="#">サンプルメニューサンプルメニュー</a></li>
-<li><a href="#">サンプルメニュー</a></li>
-<li><a href="#">サンプルメニュー</a></li>
-<li><a href="#">サンプルメニュー</a></li>
-</ul>
-<ul>
-<li class="title">メニュー見出し</li>
-<li><a href="#">サンプルメニューサンプルメニュー</a></li>
-<li><a href="#">サンプルメニュー</a></li>
-<li><a href="#">サンプルメニュー</a></li>
-<li><a href="#">サンプルメニュー</a></li>
-</ul>
-<ul>
-<li class="title">メニュー見出し</li>
-<li><a href="#">サンプルメニューサンプルメニュー</a></li>
-<li><a href="#">サンプルメニュー</a></li>
-<li><a href="#">サンプルメニュー</a></li>
-</ul>
-<ul>
-<li class="title">メニュー見出し</li>
-<li><a href="#">サンプルメニューサンプルメニューサンプルメニューサンプルメニュー</a></li>
-<li><a href="#">サンプルメニュー</a></li>
-</ul>
-</div>
+
 <!--/#footermenu-->
 
 <footer>
-<small>Copyright&copy; <a href="index.html">Travel Logo</a> All Rights Reserved.</small>
+<small>&copy; <a href="index.html">Tomoking</a> All Rights Reserved.</small>
 <span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
 </footer>
+
 
 <!--ページの上部へ戻るボタン-->
 <div class="pagetop"><a href="#"><i class="fas fa-angle-double-up"></i></a></div>
