--- a/faq.html
+++ b/faq.html
@@ -128,6 +128,17 @@
 
 </section>
 
+<div class="thumbnail-slide">
+<a href="#"><img src="images/feture1.jpg" alt=""></a>
+<a href="#"><img src="images/feture2.jpg" alt=""></a>
+<a href="#"><img src="images/feture3.jpg" alt=""></a>
+<a href="#"><img src="images/feture1.jpg" alt=""></a>
+<a href="#"><img src="images/feture2.jpg" alt=""></a>
+<a href="#"><img src="images/feture3.jpg" alt=""></a>
+</div>
+
+</section>
+
 <div id="footer-contents">
 
 <div class="left">
