--- a/menseki.html
+++ b/menseki.html
@@ -36,4 +36,51 @@
 
     <p>これらの免責事項をお読みいただき、ご了承の上でサービスをご利用ください。最大限のサービスを提供できるよう努めてまいりますので、ご理解とご協力をよろしくお願いいたします。</p>
 </body>
+
+    <div class="thumbnail-slide">
+<a href="#"><img src="images/feture1.jpg" alt=""></a>
+<a href="#"><img src="images/feture2.jpg" alt=""></a>
+<a href="#"><img src="images/feture3.jpg" alt=""></a>
+<a href="#"><img src="images/feture1.jpg" alt=""></a>
+<a href="#"><img src="images/feture2.jpg" alt=""></a>
+<a href="#"><img src="images/feture3.jpg" alt=""></a>
+</div>
+
+</section>
+
+<div id="footer-contents">
+
+<div class="left">
+
+<h3>ともきんぐ</h3>
+<p>メール：tomoki.business.0715@gmail.com</p>
+
+<ul class="icons">
+<li><a href="https://lin.ee/NMnSBZW"><i class="fab fa-line"></i></a></li>
+<li><a href="https://youtube.com/@tomotomoking?si=-To-MK_6kz3ujxdS"><i class="fab fa-youtube"></i></a></li>
+</ul>
+
+<p class="btn"><a href="https://docs.google.com/forms/d/e/1FAIpQLSddD4xnvoc9QdZz3LcxiyphRp9M5ZNudzO9mEMu8_v2b3OH7A/viewform?usp=dialog">問い合わせ</a></p>
+<p><a href="privacy.html">プライバシーポリシー</a></p>
+<p><a href="transraw.html">特定商取引法に基づく表示</a></p>
+<p><a href="menseki.html">免責事項</a></p>
+
+
+</div>
+<!--/.left-->
+
+
+<!--/.right-->
+
+</div>
+<!--/#footer-contents-->
+
+
+<!--/#footermenu-->
+
+<footer>
+<small>&copy; <a href="index.html">Tomoking</a> All Rights Reserved.</small>
+<span class="pr"><a href="https://template-party.com/" target="_blank">《Web Design:Template-Party》</a></span>
+</footer>
+
 </html>
