--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <meta charset="UTF-8">
 <title>ともきんぐの受験指導</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="ここにサイト説明を入れます">
+<meta name="description" content="ともきんぐ【君だけの先生】">
 <link rel="stylesheet" href="css/style.css">
 </head>
 
