--- a/confirm.html
+++ b/confirm.html
@@ -2,12 +2,11 @@
 <html lang="ja">
 <head>
 <meta charset="UTF-8">
-<title>観光案内サイト・旅行会社向け 無料ホームページテンプレート tp_travel1</title>
+<title>ともきんぐの受験指導</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<meta name="description" content="ここにサイト説明を入れます">
+<meta name="description" content="ともきんぐ【君だけの先生】">
 <link rel="stylesheet" href="css/style.css">
 </head>
-
 <body>
 
 <header>
