--- a/destinations.html
+++ b/destinations.html
@@ -62,11 +62,11 @@
 
 <section>
 
-<h2>今の季節に人気の観光地<span class="small">Popular tourist destinations for this season</span></h2>
+<h2>コース一覧</h2>
 
 <div class="list-free blur" id="link1">
 
-<h3 class="order1">観光地メニュー 1</h3>
+<h3 class="order1">勉強習慣獲得プログラム</h3>
 
 <div class="text order2">
 <p>白砂のビーチと透き通る青い海が広がるこのリゾート地は、まさに天国の一部です。</p>
