--- a/destinations.html
+++ b/destinations.html
@@ -68,6 +68,248 @@
 
 <h3 class="order1">勉強習慣獲得プログラム</h3>
 
+<section>
+            <h2>「【絶望】頑張りたいのに、机に向かえない君へ」</h2>
+            <img src="placeholder-pain.jpg" alt="うなだれてたくさんの参考書を前に途方に暮れている受験生">
+            <p>
+                何度「明日から」と決意しても、結局三日坊主…<br>
+                やろうと思っても、何から始めていいか分からず時間だけが過ぎていく…<br>
+                周りは頑張ってるように見えるのに、自分だけ立ち止まっている気がする…
+            </p>
+            <p>
+                受験生なのに、思うように勉強が続かない。<br>
+                そんな風に自分を責めて、苦しんでいませんか？
+            </p>
+            <p>
+                その気持ち、痛いほどよく分かります。
+            </p>
+        </section>
+
+        <section>
+            <h2>それは、<strong>「あなたのせい」</strong>ではありません。</h2>
+            <img src="placeholder-alone.jpg" alt="鎖に繋がれているようなイメージの学生、または険しい山を一人で登るシルエット">
+            <p>
+                実は、多くの人が「一人で毎日コツコツ続ける」ことに苦労しています。<br>
+                人間は本来、誰かと繋がっている環境や、適度な見守りがある方が、目標に向かって力を発揮しやすいからです。
+            </p>
+            <p>
+                一人きりだと、誘惑に弱くなり、サボっても誰にもバレない安心感（？）から、つい楽な方に流されてしまうのは、ごく自然なことなんです。
+            </p>
+            <p>
+                あなたに必要なのは、根性ややる気ではなく、<strong>「毎日やれる仕組み」</strong>と、**「あなたを一人にしない伴走者」**なんです。
+            </p>
+        </section>
+
+        <section>
+            <h2>もう、「一人で悩む時間」は終わりにしよう。</h2>
+            <h2><strong>「[ここに正式名称]」</strong>が、あなたを変えます。</h2>
+
+            <img src="placeholder-support-network.jpg" alt="ともきんぐ、学生、LINE、コミュニティが繋がったサポート網のイメージ">
+            <p>
+                そんな「一人で続かない悩み」を根本から解決し、<strong>受験勉強を乗り切るための揺るぎない「勉強習慣」を身につける</strong>ためのプログラムが誕生しました。
+            </p>
+             <p>
+                「一人じゃ続かない」君が、無理なく、着実に、<strong>「毎日コツコツ頑張れる自分」に変わる</strong>ための、科学に基づいた**「仕組み」と、あなたの「伴走者」**がここにいます。
+            </p>
+        </section>
+
+        <section>
+            <h2>迷う時間をなくし、行動を始めるスイッチを入れる<strong>「毎日ミッション」</strong></h2>
+
+            <img src="placeholder-daily-mission.jpg" alt="スマホにLINEでミッションが届くイメージ、またはチェックリスト">
+            <p>
+                「今日、何をすればいいんだろう？」と迷う時間、もったいないですよね。
+            </p>
+            <p>
+                このプログラムでは、心理学に基づいたスモールステップで、「今日のあなたは、これだけやればOK！」という具体的な学習ミッションが毎日あなたのLINEに届きます。
+            </p>
+            <ul>
+                <li>毎日「これだけ！」が明確に。迷わずすぐに取りかかれます。</li>
+                <li>無理なく達成できる設計。小さな成功体験を毎日積み重ねられます。</li>
+                <li>習慣化の土台が自然に作られます。</li>
+            </ul>
+            <p>
+                さらに、ミッションをクリアしたかどうかを毎日LINEでご報告いただきます。この<strong>「報告する」という外部からの目が、一人だとついついサボってしまうあなたに、適度なプレッシャーと「やらなきゃ！」という良い強制力</strong>を生み出します。
+            </p>
+        </section>
+
+        <section>
+            <h2>「挫折させない」[あなたの名前/ともきんぐ]の個別LINE伴走サポート</h2>
+
+            <img src="placeholder-tomoking-line.jpg" alt="[あなたの名前/ともきんぐ]の温かい雰囲気の写真またはイラストとLINEのやり取り">
+            <p>
+                このプログラムの最も大切な要素の一つが、私、[あなたの名前/ともきんぐ]によるLINEでの個別サポートです。
+            </p>
+            <p>
+                毎日報告を見て、<strong>もしミッションが達成できなかった時も、決してあなたを責めません。</strong>
+            </p>
+            <p>
+                「なぜ今日は難しかった？」「次回は時間を変えてみようか？」「この教材の方が取り組みやすいかも？」など、**あなたの状況に合わせて、原因を一緒に考え、具体的な改善策をLINEで丁寧にアドバイス**します。
+            </p>
+            <ul>
+                <li>あなたの「挫折ポイント」を一緒に見つけ、乗り越える方法が分かります。</li>
+                <li>いつでも相談できる相手がいる安心感が手に入ります。</li>
+                <li>「見守られている」意識が、継続する力になります。</li>
+            </ul>
+            <p>
+                勉強内容に関する疑問や、受験に関する不安など、プログラム内容以外の学習相談にも、プログラム期間中であればLINEでいつでも対応します。
+            </p>
+        </section>
+
+        <section>
+            <h2>「一人じゃない」から頑張れる。受験生限定コミュニティ</h2>
+
+            <img src="placeholder-community.jpg" alt="オンラインで複数の学生が笑顔で繋がっているイメージ、またはチャット画面のイメージ">
+
+            <p>
+                あなたはもう、一人で悩んだり、孤独に耐えたりする必要はありません。
+            </p>
+            <p>
+                このプログラムの参加者限定の**クローズドなオンラインコミュニティ**にご招待します。<br>
+                同じように「一人じゃ続かない」悩みを抱え、克服しようと頑張る**全国の受験生**が集まっています。
+            </p>
+            <ul>
+                <li>お互いの進捗を共有し、励まし合えます。</li>
+                <li>悩みを打ち明けたり、乗り越え方を相談したりできます。</li>
+                <li>他のメンバーの頑張りが、あなたのモチベーションになります。</li>
+                <li>「自分だけじゃないんだ」という安心感が得られます。</li>
+            </ul>
+            <p>
+                仲間がいるから、つらい時期も乗り越えられます。
+            </p>
+        </section>
+
+        <section>
+            <h2>約30日後、あなたは「毎日コツコツ頑張れる自分」になっています。</h2>
+
+            <img src="placeholder-after-program.jpg" alt="自信に満ちた笑顔で勉強している受験生、積み上がった問題集、桜など合格を連想させるイメージ">
+
+            <p>
+                プログラムを終える約30日後、あなたの勉強習慣は劇的に変わっています。
+            </p>
+            <p>
+                毎日4時間（またはそれ以上）集中して勉強するのが**「当たり前」**になり、勉強への心理的なハードルが驚くほど下がります。
+            </p>
+             <ul>
+                <li>勉強するまでの「めんどくさい」時間が激減。</li>
+                <li>計画通りに進められる日が増え、<strong>自分自身に確かな自信</strong>が生まれます。</li>
+                <li>受験本番に向けて、「やれるだけのことはやれた」という強い手応えを感じるでしょう。</li>
+                <li>もう、一人で抱え込み、悩む必要はありません。</li>
+            </ul>
+            <p>
+                「やればできる」という成功体験は、勉強だけでなく、これからの人生の大きな力になります。
+            </p>
+        </section>
+
+        <section>
+            <h2>プログラム詳細とお申し込み</h2>
+
+            <img src="placeholder-info-icons.png" alt="カレンダー、LINE、お金のマークなどの情報アイコン">
+
+            <dl>
+                <dt>プログラム名称：</dt>
+                <dd>[ここに正式名称]</dd>
+
+                <dt>実施期間：</dt>
+                <dd>約30日間</dd>
+
+                <dt>提供形式：</dt>
+                <dd>オンライン（LINE公式アカウント、限定コミュニティなど）</dd>
+
+                <dt class="price-note">価格：</dt>
+                <dd class="price-note"><strong>¥3,000</strong> （ポッキリ価格、追加費用なし）</dd>
+
+                <dt>含まれるもの：</dt>
+                <dd>
+                    <ul>
+                        <li>約30日間の毎日ミッション配信</li>
+                        <li>LINEでの日次進捗確認＆個別アドバイス</li>
+                        <li>プログラム期間中の学習相談（LINEにて）</li>
+                        <li>受験生限定オンラインコミュニティ参加権</li>
+                    </ul>
+                </dd>
+            </dl>
+
+            <p>※ 本プログラムは習慣化に焦点を当てており、特定の科目の個別指導は含みません。</p>
+
+            </section>
+
+        <section>
+            <h2>さあ、あなたも「変わる一歩」を踏み出そう。</h2>
+            <img src="placeholder-cta-arrow.png" alt="力強い矢印や、目標に向かって走り出す人のイメージ">
+             <p>
+                一人で悩む日々は、もう終わりにしませんか？<br>
+                [あなたの名前/ともきんぐ]と、同じ目標を持つ仲間が、あなたの習慣獲得を徹底サポートします。
+            </p>
+            <p>
+                約30日後、「毎日コツコツ頑張れる自分」に変わって、自信を持って受験に臨む未来を掴み取りましょう。
+            </p>
+
+            <a href="[決済サービスのURLをここに設定]" class="cta-button">
+                本プログラムに参加する (¥3,000)
+            </a>
+            <div class="payment-icons">
+                <img src="icon-visa.png" alt="Visa">
+                <img src="icon-mastercard.png" alt="Mastercard">
+                <img src="icon-jcb.png" alt="JCB">
+                <img src="icon-konbini.png" alt="コンビニ決済">
+                 <img src="icon-paypay.png" alt="PayPay">
+                 <img src="icon-linepay.png" alt="LINE Pay">
+                 </div>
+
+        </section>
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+	
 <div class="text order2">
 <p>白砂のビーチと透き通る青い海が広がるこのリゾート地は、まさに天国の一部です。</p>
 <p>高級感漂うバンガローと美しいラグーンプールが揃ったこの楽園は、訪れるすべての人々に忘れられないひと時を提供します。リゾートは、美しい自然の中でリラックスするのに最適な場所であり、家族連れやカップル、友人同士の旅行にぴったりです。日中はカヤックやシュノーケリング、ビーチバレーなどのアクティビティを楽しんだり、夕方にはロマンチックなサンセットを眺めたりと、心ゆくまでリゾートライフを満喫してください。豊富なレストランやバーもあり、多彩な料理やカクテルを堪能することができます。</p>
