--- a/destinations.html
+++ b/destinations.html
@@ -5,7 +5,49 @@
 <title>ともきんぐの受験指導</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="ともきんぐ【君だけの先生】">
-<link rel="stylesheet" href="css/style.css">
+<!-- <link rel="stylesheet" href="css/style.css"> -->
+ <style>
+        /* 例：最低限のスタイル */
+        body { font-family: sans-serif; line-height: 1.6; margin: 0; padding: 0; background-color: #f4f4f4; color: #333; }
+        main { max-width: 800px; margin: 20px auto; padding: 20px; background-color: #fff; box-shadow: 0 0 10px rgba(0,0,0,0.1); }
+        section { margin-bottom: 40px; padding: 20px; border-bottom: 1px solid #eee; }
+        h2 { text-align: center; color: #0056b3; margin-bottom: 20px; }
+        h3 { color: #007bff; margin-top: 30px; margin-bottom: 15px; }
+        img { max-width: 100%; height: auto; display: block; margin: 20px auto; }
+        ul { list-style: none; padding: 0; }
+        ul li { margin-bottom: 10px; padding-left: 20px; position: relative; }
+        ul li::before { content: '✅'; position: absolute; left: 0; color: green; } /* 例：チェックマーク */
+        strong { color: #d9534f; } /* 例：強調文字の色 */
+        .cta-button {
+            display: block;
+            width: 80%;
+            max-width: 300px;
+            margin: 30px auto;
+            padding: 15px 20px;
+            text-align: center;
+            background-color: #28a745;
+            color: white;
+            font-size: 1.2em;
+            font-weight: bold;
+            text-decoration: none;
+            border-radius: 5px;
+            transition: background-color 0.3s ease;
+        }
+        .cta-button:hover {
+            background-color: #218838;
+        }
+        .price-note { text-align: center; font-size: 1.1em; margin-bottom: 20px; }
+        .payment-icons img { height: 25px; margin: 0 5px; display: inline-block; width: auto; } /* 決済アイコン用スタイル */
+
+        /* 各セクションの画像にクラスを振るなどを検討し、CSSで調整 */
+        .img-pain img { /* 例：悩みのイメージ画像用クラス */ }
+        .img-solution img { /* 例：解決策のイメージ画像用クラス */ }
+        /* その他、PCとスマホでの表示調整（レスポンシブ対応）もCSSで行います */
+
+    </style>
+
+
+	
 </head>
 
 <body>
