--- a/destinations.html
+++ b/destinations.html
@@ -70,151 +70,151 @@
 <h3 class="order1">勉強習慣獲得プログラム</h3>
 
 <section>
-            <h2>「【絶望】頑張りたいのに、机に向かえない君へ」</h2>
-            <img src="placeholder-pain.jpg" alt="うなだれてたくさんの参考書を前に途方に暮れている受験生">
-            <p>
+            <h2 class="dh2">「【絶望】頑張りたいのに、机に向かえない君へ」</h2>
+            <img src="placeholder-pain.jpg" alt="うなだれてたくさんの参考書を前に途方に暮れている受験生" class="dpics">
+            <p class="dnp">
                 何度「明日から」と決意しても、結局三日坊主…<br>
                 やろうと思っても、何から始めていいか分からず時間だけが過ぎていく…<br>
                 周りは頑張ってるように見えるのに、自分だけ立ち止まっている気がする…
             </p>
-            <p>
+            <p class="dnp">
                 受験生なのに、思うように勉強が続かない。<br>
                 そんな風に自分を責めて、苦しんでいませんか？
             </p>
-            <p>
+            <p class="dnp">
                 その気持ち、痛いほどよく分かります。
             </p>
         </section>
 
         <section>
-            <h2>それは、<strong>「あなたのせい」</strong>ではありません。</h2>
-            <img src="placeholder-alone.jpg" alt="鎖に繋がれているようなイメージの学生、または険しい山を一人で登るシルエット">
-            <p>
+            <h2 class="dh2">それは、<strong>「あなたのせい」</strong>ではありません。</h2>
+            <img src="placeholder-alone.jpg" alt="鎖に繋がれているようなイメージの学生、または険しい山を一人で登るシルエット" class="dpics">
+            <p class="dnp">
                 実は、多くの人が「一人で毎日コツコツ続ける」ことに苦労しています。<br>
                 人間は本来、誰かと繋がっている環境や、適度な見守りがある方が、目標に向かって力を発揮しやすいからです。
             </p>
-            <p>
+            <p class="dnp">
                 一人きりだと、誘惑に弱くなり、サボっても誰にもバレない安心感（？）から、つい楽な方に流されてしまうのは、ごく自然なことなんです。
             </p>
-            <p>
+            <p class="dnp">
                 あなたに必要なのは、根性ややる気ではなく、<strong>「毎日やれる仕組み」</strong>と、**「あなたを一人にしない伴走者」**なんです。
             </p>
         </section>
 
         <section>
-            <h2>もう、「一人で悩む時間」は終わりにしよう。</h2>
-            <h2><strong>「[ここに正式名称]」</strong>が、あなたを変えます。</h2>
+            <h2 class="dh2">もう、「一人で悩む時間」は終わりにしよう。</h2>
+            <h2 class="dh2"><strong>「[ここに正式名称]」</strong>が、あなたを変えます。</h2>
 
-            <img src="placeholder-support-network.jpg" alt="ともきんぐ、学生、LINE、コミュニティが繋がったサポート網のイメージ">
-            <p>
+            <img src="placeholder-support-network.jpg" alt="ともきんぐ、学生、LINE、コミュニティが繋がったサポート網のイメージ" class="dpics">
+            <p class="dnp">
                 そんな「一人で続かない悩み」を根本から解決し、<strong>受験勉強を乗り切るための揺るぎない「勉強習慣」を身につける</strong>ためのプログラムが誕生しました。
             </p>
-             <p>
+             <p class="dnp">
                 「一人じゃ続かない」君が、無理なく、着実に、<strong>「毎日コツコツ頑張れる自分」に変わる</strong>ための、科学に基づいた**「仕組み」と、あなたの「伴走者」**がここにいます。
             </p>
         </section>
 
         <section>
-            <h2>迷う時間をなくし、行動を始めるスイッチを入れる<strong>「毎日ミッション」</strong></h2>
+            <h2 class="dh2">迷う時間をなくし、行動を始めるスイッチを入れる<strong>「毎日ミッション」</strong></h2>
 
-            <img src="placeholder-daily-mission.jpg" alt="スマホにLINEでミッションが届くイメージ、またはチェックリスト">
-            <p>
+            <img src="placeholder-daily-mission.jpg" alt="スマホにLINEでミッションが届くイメージ、またはチェックリスト" class="dpics">
+            <p class="dnp">
                 「今日、何をすればいいんだろう？」と迷う時間、もったいないですよね。
             </p>
-            <p>
+            <p class="dnp">
                 このプログラムでは、心理学に基づいたスモールステップで、「今日のあなたは、これだけやればOK！」という具体的な学習ミッションが毎日あなたのLINEに届きます。
             </p>
             <ul>
-                <li>毎日「これだけ！」が明確に。迷わずすぐに取りかかれます。</li>
-                <li>無理なく達成できる設計。小さな成功体験を毎日積み重ねられます。</li>
-                <li>習慣化の土台が自然に作られます。</li>
+                <li class="dsli">毎日「これだけ！」が明確に。迷わずすぐに取りかかれます。</li>
+                <li class="dsli">無理なく達成できる設計。小さな成功体験を毎日積み重ねられます。</li>
+                <li class="dsli">習慣化の土台が自然に作られます。</li>
             </ul>
-            <p>
+            <p class="dnp">
                 さらに、ミッションをクリアしたかどうかを毎日LINEでご報告いただきます。この<strong>「報告する」という外部からの目が、一人だとついついサボってしまうあなたに、適度なプレッシャーと「やらなきゃ！」という良い強制力</strong>を生み出します。
             </p>
         </section>
 
         <section>
-            <h2>「挫折させない」[あなたの名前/ともきんぐ]の個別LINE伴走サポート</h2>
+            <h2 class="dh2">「挫折させない」[あなたの名前/ともきんぐ]の個別LINE伴走サポート</h2>
 
-            <img src="placeholder-tomoking-line.jpg" alt="[あなたの名前/ともきんぐ]の温かい雰囲気の写真またはイラストとLINEのやり取り">
-            <p>
+            <img src="placeholder-tomoking-line.jpg" alt="[あなたの名前/ともきんぐ]の温かい雰囲気の写真またはイラストとLINEのやり取り" class="dpics">
+            <p class="dnp">
                 このプログラムの最も大切な要素の一つが、私、[あなたの名前/ともきんぐ]によるLINEでの個別サポートです。
             </p>
-            <p>
+            <p class="dnp">
                 毎日報告を見て、<strong>もしミッションが達成できなかった時も、決してあなたを責めません。</strong>
             </p>
-            <p>
+            <p class="dnp">
                 「なぜ今日は難しかった？」「次回は時間を変えてみようか？」「この教材の方が取り組みやすいかも？」など、**あなたの状況に合わせて、原因を一緒に考え、具体的な改善策をLINEで丁寧にアドバイス**します。
             </p>
             <ul>
-                <li>あなたの「挫折ポイント」を一緒に見つけ、乗り越える方法が分かります。</li>
-                <li>いつでも相談できる相手がいる安心感が手に入ります。</li>
-                <li>「見守られている」意識が、継続する力になります。</li>
+                <li class="dsli">あなたの「挫折ポイント」を一緒に見つけ、乗り越える方法が分かります。</li>
+                <li class="dsli">いつでも相談できる相手がいる安心感が手に入ります。</li>
+                <li class="dsli">「見守られている」意識が、継続する力になります。</li>
             </ul>
-            <p>
+            <p class="dnp">
                 勉強内容に関する疑問や、受験に関する不安など、プログラム内容以外の学習相談にも、プログラム期間中であればLINEでいつでも対応します。
             </p>
         </section>
 
         <section>
-            <h2>「一人じゃない」から頑張れる。受験生限定コミュニティ</h2>
+            <h2 class="dh2">「一人じゃない」から頑張れる。受験生限定コミュニティ</h2>
 
-            <img src="placeholder-community.jpg" alt="オンラインで複数の学生が笑顔で繋がっているイメージ、またはチャット画面のイメージ">
+            <img src="placeholder-community.jpg" alt="オンラインで複数の学生が笑顔で繋がっているイメージ、またはチャット画面のイメージ" class="dpics">
 
-            <p>
+            <p class="dnp">
                 あなたはもう、一人で悩んだり、孤独に耐えたりする必要はありません。
             </p>
-            <p>
+            <p class="dnp">
                 このプログラムの参加者限定の**クローズドなオンラインコミュニティ**にご招待します。<br>
                 同じように「一人じゃ続かない」悩みを抱え、克服しようと頑張る**全国の受験生**が集まっています。
             </p>
             <ul>
-                <li>お互いの進捗を共有し、励まし合えます。</li>
-                <li>悩みを打ち明けたり、乗り越え方を相談したりできます。</li>
-                <li>他のメンバーの頑張りが、あなたのモチベーションになります。</li>
-                <li>「自分だけじゃないんだ」という安心感が得られます。</li>
+                <li class="dsli">お互いの進捗を共有し、励まし合えます。</li>
+                <li class="dsli">悩みを打ち明けたり、乗り越え方を相談したりできます。</li>
+                <li class="dsli">他のメンバーの頑張りが、あなたのモチベーションになります。</li>
+                <li class="dsli">「自分だけじゃないんだ」という安心感が得られます。</li>
             </ul>
-            <p>
+            <p class="dnp">
                 仲間がいるから、つらい時期も乗り越えられます。
             </p>
         </section>
 
         <section>
-            <h2>約30日後、あなたは「毎日コツコツ頑張れる自分」になっています。</h2>
+            <h2 class="dh2">約30日後、あなたは「毎日コツコツ頑張れる自分」になっています。</h2>
 
-            <img src="placeholder-after-program.jpg" alt="自信に満ちた笑顔で勉強している受験生、積み上がった問題集、桜など合格を連想させるイメージ">
+            <img src="placeholder-after-program.jpg" alt="自信に満ちた笑顔で勉強している受験生、積み上がった問題集、桜など合格を連想させるイメージ" class="dpics">
 
-            <p>
+            <p class="dnp">
                 プログラムを終える約30日後、あなたの勉強習慣は劇的に変わっています。
             </p>
-            <p>
+            <p class="dnp">
                 毎日4時間（またはそれ以上）集中して勉強するのが**「当たり前」**になり、勉強への心理的なハードルが驚くほど下がります。
             </p>
              <ul>
-                <li>勉強するまでの「めんどくさい」時間が激減。</li>
-                <li>計画通りに進められる日が増え、<strong>自分自身に確かな自信</strong>が生まれます。</li>
-                <li>受験本番に向けて、「やれるだけのことはやれた」という強い手応えを感じるでしょう。</li>
-                <li>もう、一人で抱え込み、悩む必要はありません。</li>
+                <li class="dsli">勉強するまでの「めんどくさい」時間が激減。</li>
+                <li class="dsli">計画通りに進められる日が増え、<strong>自分自身に確かな自信</strong>が生まれます。</li>
+                <li class="dsli">受験本番に向けて、「やれるだけのことはやれた」という強い手応えを感じるでしょう。</li>
+                <li class="dsli">もう、一人で抱え込み、悩む必要はありません。</li>
             </ul>
-            <p>
+            <p class="dnp">
                 「やればできる」という成功体験は、勉強だけでなく、これからの人生の大きな力になります。
             </p>
         </section>
 
         <section>
-            <h2>プログラム詳細とお申し込み</h2>
+            <h2 class="dh2">プログラム詳細とお申し込み</h2>
 
-            <img src="placeholder-info-icons.png" alt="カレンダー、LINE、お金のマークなどの情報アイコン">
+            <img src="placeholder-info-icons.png" alt="カレンダー、LINE、お金のマークなどの情報アイコン" class="dpics">
 
             <dl>
-                <dt>プログラム名称：</dt>
+                <dt class="dsdt">プログラム名称：</dt>
                 <dd>[ここに正式名称]</dd>
 
-                <dt>実施期間：</dt>
+                <dt class="dsdt">実施期間：</dt>
                 <dd>約30日間</dd>
 
-                <dt>提供形式：</dt>
+                <dt class="dsdt">提供形式：</dt>
                 <dd>オンライン（LINE公式アカウント、限定コミュニティなど）</dd>
 
                 <dt class="price-note">価格：</dt>
@@ -223,10 +223,10 @@
                 <dt>含まれるもの：</dt>
                 <dd>
                     <ul>
-                        <li>約30日間の毎日ミッション配信</li>
-                        <li>LINEでの日次進捗確認＆個別アドバイス</li>
-                        <li>プログラム期間中の学習相談（LINEにて）</li>
-                        <li>受験生限定オンラインコミュニティ参加権</li>
+                        <li class="dsli">約30日間の毎日ミッション配信</li>
+                        <li class="dsli">LINEでの日次進捗確認＆個別アドバイス</li>
+                        <li class="dsli">プログラム期間中の学習相談（LINEにて）</li>
+                        <li class="dsli">受験生限定オンラインコミュニティ参加権</li>
                     </ul>
                 </dd>
             </dl>
@@ -236,13 +236,13 @@
             </section>
 
         <section>
-            <h2>さあ、あなたも「変わる一歩」を踏み出そう。</h2>
+            <h2 class="dh2">さあ、あなたも「変わる一歩」を踏み出そう。</h2>
             <img src="placeholder-cta-arrow.png" alt="力強い矢印や、目標に向かって走り出す人のイメージ">
-             <p>
+             <p class="dnp">
                 一人で悩む日々は、もう終わりにしませんか？<br>
                 [あなたの名前/ともきんぐ]と、同じ目標を持つ仲間が、あなたの習慣獲得を徹底サポートします。
             </p>
-            <p>
+            <p class="dnp">
                 約30日後、「毎日コツコツ頑張れる自分」に変わって、自信を持って受験に臨む未来を掴み取りましょう。
             </p>
 
